--- a/Task/styles/style3.css
+++ b/Task/styles/style3.css
@@ -4,9 +4,12 @@
     box-sizing: border-box;
     
 }
-
+header{
+    display: flex;
+    flex-direction: column;
+}
 .first-title{
-    display: block;
+    display: inline-block;
     height: 160px;
     background-color: white;
     color: black;
@@ -18,7 +21,7 @@
 }
 
 .second-title{
-    display: block;
+    display: inline-block;
     background-color: black;
     height: 100px;
 }
@@ -50,10 +53,14 @@ li a{
     position: absolute;
     top: 20px;
     right: 850px;
-    list-style: none;
-    
+    list-style: none;    
 }
+.nav li{
+    display: inline-block;
+    width: 10%;
+    padding: 5px 10px;
 
+}
 li a {
     color: black;
     padding: 15px;
